--- a/crawling/carwling2.ipynb
+++ b/crawling/carwling2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "21f3635e",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,61 @@
       "[밑반찬] page 149 완료 — 이번 4개 / 누적 1130개\n",
       "[밑반찬] page 150 완료 — 이번 5개 / 누적 1135개\n",
       "[밑반찬] page 151 완료 — 이번 6개 / 누적 1141개\n",
-      "[밑반찬] page 152 완료 — 이번 3개 / 누적 1144개\n"
+      "[밑반찬] page 152 완료 — 이번 3개 / 누적 1144개\n",
+      "[밑반찬] page 153 완료 — 이번 5개 / 누적 1149개\n",
+      "[밑반찬] page 154 완료 — 이번 4개 / 누적 1153개\n",
+      "[밑반찬] page 155 완료 — 이번 4개 / 누적 1157개\n",
+      "[밑반찬] page 156 완료 — 이번 5개 / 누적 1162개\n",
+      "[밑반찬] page 157 완료 — 이번 3개 / 누적 1165개\n",
+      "[밑반찬] page 158 완료 — 이번 4개 / 누적 1169개\n",
+      "[밑반찬] page 159 완료 — 이번 4개 / 누적 1173개\n",
+      "[밑반찬] page 160 완료 — 이번 5개 / 누적 1178개\n",
+      "[밑반찬] page 161 완료 — 이번 2개 / 누적 1180개\n",
+      "[밑반찬] page 162 완료 — 이번 2개 / 누적 1182개\n",
+      "[밑반찬] page 163 완료 — 이번 3개 / 누적 1185개\n",
+      "[밑반찬] page 164 완료 — 이번 4개 / 누적 1189개\n",
+      "[밑반찬] page 165 완료 — 이번 6개 / 누적 1195개\n",
+      "[밑반찬] page 166 완료 — 이번 4개 / 누적 1199개\n",
+      "[밑반찬] page 167 완료 — 이번 1개 / 누적 1200개\n",
+      "[밑반찬] page 168 완료 — 이번 3개 / 누적 1203개\n",
+      "[밑반찬] page 169 완료 — 이번 7개 / 누적 1210개\n",
+      "[밑반찬] page 170 완료 — 이번 5개 / 누적 1215개\n",
+      "[밑반찬] page 171 완료 — 이번 6개 / 누적 1221개\n",
+      "[밑반찬] page 172 완료 — 이번 5개 / 누적 1226개\n",
+      "[밑반찬] page 173 완료 — 이번 3개 / 누적 1229개\n",
+      "[밑반찬] page 174 완료 — 이번 6개 / 누적 1235개\n",
+      "[밑반찬] page 175 완료 — 이번 6개 / 누적 1241개\n",
+      "[밑반찬] page 176 완료 — 이번 5개 / 누적 1246개\n",
+      "[밑반찬] page 177 완료 — 이번 6개 / 누적 1252개\n",
+      "[밑반찬] page 178 완료 — 이번 2개 / 누적 1254개\n",
+      "[밑반찬] page 179 완료 — 이번 3개 / 누적 1257개\n",
+      "[밑반찬] page 180 완료 — 이번 1개 / 누적 1258개\n",
+      "[밑반찬] page 181 완료 — 이번 5개 / 누적 1263개\n",
+      "[밑반찬] page 182 완료 — 이번 4개 / 누적 1267개\n",
+      "[밑반찬] page 183 완료 — 이번 1개 / 누적 1268개\n",
+      "[밑반찬] page 184 완료 — 이번 6개 / 누적 1274개\n",
+      "[밑반찬] page 185 완료 — 이번 2개 / 누적 1276개\n",
+      "[밑반찬] page 186 완료 — 이번 2개 / 누적 1278개\n",
+      "[밑반찬] page 187 완료 — 이번 2개 / 누적 1280개\n",
+      "[밑반찬] page 188 완료 — 이번 2개 / 누적 1282개\n",
+      "[밑반찬] page 189 완료 — 이번 6개 / 누적 1288개\n",
+      "[밑반찬] page 190 완료 — 이번 2개 / 누적 1290개\n",
+      "[밑반찬] page 191 완료 — 이번 2개 / 누적 1292개\n",
+      "[밑반찬] page 192 완료 — 이번 4개 / 누적 1296개\n",
+      "[밑반찬] 중단 (page 193) — 새로운 레시피 없음\n",
+      "[밑반찬] 조회수 10만 이상 레시피 1296개 발견\n",
+      "❌ 6869205 불러오기 실패: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 183\u001b[0m\n\u001b[0;32m    181\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m data:\n\u001b[0;32m    182\u001b[0m         data_list\u001b[38;5;241m.\u001b[39mappend(data)\n\u001b[1;32m--> 183\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrandom\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muniform\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1.5\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    185\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m data_list:\n\u001b[0;32m    186\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data_list)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
